@@ -3,8 +3,8 @@
 #' \tabular{ll}{
 #' Package: \tab afex\cr
 #' Type: \tab Package\cr
-#' Version: \tab 0.3-37\cr
-#' Date: \tab 2012-08-23\cr
+#' Version: \tab 0.3-38\cr
+#' Date: \tab 2012-08-24\cr
 #' Depends: \tab R (>= 2.14.0), car, lme4, pbkrtest, reshape2, stringr, coin\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>=3)\cr
